--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - run:
           name: Build and publish to PyPI
           command: |
+            git fetch --tags --force
             python -m pip install --upgrade pip
             pip install build twine
             python -m build
